--- a/自我介紹.html
+++ b/自我介紹.html
@@ -19,16 +19,16 @@ td{color: blue;}
 </style>
 <body><table>
 <tr>
-<th><img src="路跑/20150419.jpg" width="300" height="300"></th>
-<th><img src="路跑/20150523.jpg" width="300" height="300"></th>
+<th><img src="images/20150419.jpg" width="300" height="300"></th>
+<th><img src="images/20150523.jpg" width="300" height="300"></th>
 </tr>
 <tr>
 <td>2015.4.19台東馬拉松</td>
 <td>2015.5.23知本溫泉馬拉松</td>
 </tr>
 <tr>
-<th><img src="路跑/2016313.jpg" width="300" height="300"></th>
-<th><img src="路跑/2016819.jpg" width="300" height="300"></th>
+<th><img src="images/2016313.jpg" width="300" height="300"></th>
+<th><img src="images/2016819.jpg" width="300" height="300"></th>
 </tr>
 <tr>
 <td>2016.3.13台東馬拉松</td>
@@ -44,16 +44,16 @@ th{height: 50px;}
 </style>
 <body><table>
 <tr>
-<th><img src="書/解憂.jpg" width="300" height="300"></th>
-<th><img src="書/夢幻花.jpg" width="300" height="300"></th>
+<th><img src="images/解憂.jpg" width="300" height="300"></th>
+<th><img src="images/夢幻花.jpg" width="300" height="300"></th>
 </tr>
 <tr>
 <th><a href="http://www.books.com.tw/products/0010594847">作者:東野圭吾 書名:解憂雜貨店</a> </th>
 <th><a href="http://www.books.com.tw/products/0010633620">作者:東野圭吾 書名:夢幻花</a></th>
 </tr>
 <tr>
-<th><img src="書/禮物.jpg" width="300" height="300"></th>
-<th><img src="書/蘇西.jpg" width="300" height="300"></th>
+<th><img src="images/禮物.jpg" width="300" height="300"></th>
+<th><img src="images/蘇西.jpg" width="300" height="300"></th>
 </tr>
 <tr>
 <th><a href="http://www.books.com.tw/products/0010281596?loc=P_asb_001">作者： 史賓賽.強森博士  書名:禮物</a></th>
