--- a/自我介紹.html
+++ b/自我介紹.html
@@ -4,11 +4,12 @@ h1{background-color: pink;color:orange;text-align:center;}
 p{background-color: lightblue;font-family:"Times New Roman"; font-size:2opx;}	
 </style>
 <body><meta charset="utf-8">
-<h1>自我介紹</h1>
-<p>姓名:楊沛錡</p>
-<p>班級:應數三</p>
-<p>學號:10304106</p>
-<p>興趣:慢跑、看課外讀物</p>
+<h1 id="demo">自我介紹</h1>
+<p id="demo">姓名:楊沛錡</p>
+<p id="demo">班級:應數三</p>
+<p id="demo">學號:10304106</p>
+<p id="demo">興趣:慢跑、看課外讀物</p>
+  <button type="button" onclick="document.getElementById('demo').style.fontSize='35px'">認識我</button>
 <h2>一、慢跑競賽</h2>
 <style>
 table,td,th{border:1px solid black;}
