--- a/自我介紹.html
+++ b/自我介紹.html
@@ -9,7 +9,7 @@ p{background-color: lightblue;font-family:"Times New Roman"; font-size:2opx;}
 <p id="demo"style="display:none">Hello >班級:應數三</p>
 <p id="demo" style="display:none">Hello>學號:10304106</p>
 <p id="demo"style="display:none">Hello >興趣:慢跑、看課外讀物</p>
-  <button type="button" onclick="document.getElementById('demo').style.fontSize='35px'">認識我</button>
+ <button type="button" onclick="document.getElementById('demo').style.display='block'">認識我</button>
 <h2>一、慢跑競賽</h2>
 <style>
 table,td,th{border:1px solid black;}
