--- a/自我介紹.html
+++ b/自我介紹.html
@@ -4,7 +4,7 @@ h1{background-color: pink;color:orange;text-align:center;}
 p{background-color: lightblue;font-family:"Times New Roman"; font-size:2opx;}	
 </style>
 <body><meta charset="utf-8">
-<h1 >Hello>自我介紹</h1>
+<h1>自我介紹</h1>
 <p id="demo"style="display:none">Hello >姓名:楊沛錡</p>
 <p id="demo"style="display:none">Hello >班級:應數三</p>
 <p id="demo" style="display:none">Hello>學號:10304106</p>
