--- a/自我介紹.html
+++ b/自我介紹.html
@@ -5,10 +5,10 @@ p{background-color: lightblue;font-family:"Times New Roman"; font-size:2opx;}
 </style>
 <body><meta charset="utf-8">
 <h1>自我介紹</h1>
-<p id="demo"style="display:none">Hello >姓名:楊沛錡</p>
-<p id="demo"style="display:none">Hello >班級:應數三</p>
-<p id="demo" style="display:none">Hello>學號:10304106</p>
-<p id="demo"style="display:none">Hello >興趣:慢跑、看課外讀物</p>
+<p id="demo"style="display:none">姓名:楊沛錡</p>
+<p id="demo"style="display:none">班級:應數三</p>
+<p id="demo" style="display:none">學號:10304106</p>
+<p id="demo"style="display:none">興趣:慢跑、看課外讀物</p>
  <button type="button" onclick="document.getElementById('demo').style.display='block'">認識我</button>
 <h2>一、慢跑競賽</h2>
 <style>
