--- a/自我介紹.html
+++ b/自我介紹.html
@@ -5,11 +5,15 @@ p{background-color: lightblue;font-family:"Times New Roman"; font-size:2opx;}
 </style>
 <body><meta charset="utf-8">
 <h1>自我介紹</h1>
-<p id="demo"style="display:none">姓名:楊沛錡</p>
-<p id="demo"style="display:none">班級:應數三</p>
-<p id="demo" style="display:none">學號:10304106</p>
-<p id="demo"style="display:none">興趣:慢跑、看課外讀物</p>
- <button type="button" onclick="document.getElementById('demo').style.display='block'">認識我</button>
+<p id="demo1"style="display:none">楊沛錡</p>
+  <button type="button" onclick="document.getElementById('demo1').style.display='block'">姓名</button>
+<p id="demo2"style="display:none">應數三</p>
+  <button type="button" onclick="document.getElementById('demo2').style.display='block'">班級</button>
+<p id="demo3" style="display:none">10304106</p>
+  <button type="button" onclick="document.getElementById('demo3').style.display='block'">學號</button>
+<p id="demo4"style="display:none">慢跑、看課外讀物</p>
+  <button type="button" onclick="document.getElementById('demo4').style.display='block'">興趣</button>
+
 <h2>一、慢跑競賽</h2>
 <style>
 table,td,th{border:1px solid black;}
