--- a/自我介紹.html
+++ b/自我介紹.html
@@ -4,6 +4,11 @@ h1{background-color: pink;color:orange;text-align:center;}
 p{background-color: lightblue;font-family:"Times New Roman"; font-size:2opx;}	
 </style>
 <body><meta charset="utf-8">
+  <script>
+
+alert("歡迎來認識我");
+
+</script>
 <h1>自我介紹</h1>
 <p id="demo1"style="display:none">楊沛錡</p>
   <button type="button" onclick="document.getElementById('demo1').style.display='block'">姓名</button>
