--- a/自我介紹.html
+++ b/自我介紹.html
@@ -1,10 +1,4 @@
-<head>
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
-<link rel="stylesheet" href="fancyapps-fancyBox-18d1712/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-
-<script src="fancyapps-fancyBox-18d1712/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-</head>
 
 <style>
 body{background-color:white;}
@@ -37,8 +31,8 @@ td{color: blue;}
 </style>
 <body><table>
 <tr>
- <a class="fancybox" rel="group" href="images/image1.jpg"><img src="images/20150419.jpg" width="300" height="300"></a>
-<th>></th>
+
+<th><img src="images/20150419.jpg" width="300" height="300"></th>
 <th><img src="images/20150523.jpg" width="300" height="300"></th>
 </tr>
 <tr>
